# my_kaggle_env

./: .gitignore  Dockerfile  README.md  compose.yaml  make_exp.sh  pyproject.toml
exp/000/: eda.ipynb  eda_llm.ipynb
exp/000/config/: config.yaml
