[project]
name = "my-kaggle-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.44.1",
    "datasets>=3.1.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "openai>=1.54.3",
    "pandas>=2.2.3",
    "peft>=0.13.2",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers==3.1.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]
